--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cssnano": "^4.1.7",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "0.0.3",
     "postcss-px-to-viewport-opt": "0.0.4",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
+    "swiper": "^4.4.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
-    "vue-ydui": "^1.2.6"
+    "vue-ydui": "^1.2.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
