--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cssnano": "^4.1.7",
+    "flyio": "^0.6.5",
     "swiper": "^4.4.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
@@ -21,14 +22,6 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "postcss-aspect-ratio-mini": "0.0.2",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-px-to-viewport": "0.0.3",
-    "postcss-px-to-viewport-opt": "0.0.4",
-    "postcss-viewport-units": "^0.1.6",
-    "postcss-write-svg": "^3.0.1",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -46,13 +39,21 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "postcss-aspect-ratio-mini": "0.0.2",
+    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-px-to-viewport": "0.0.3",
+    "postcss-px-to-viewport-opt": "0.0.4",
     "postcss-url": "^7.2.1",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
