--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swiper": "^4.4.2",
     "vue": "^2.5.2",
     "vue-area-linkage": "^5.1.0",
+    "vue-awesome-mui": "^1.7.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
