--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-awesome-mui": "^1.7.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
+    "vue-navigation": "^1.1.4",
     "vue-qart": "^2.2.0",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.6",
