--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "cssnano": "^4.1.7",
     "element-ui": "^2.4.11",
+    "exif": "^0.6.0",
     "moment": "^2.22.2",
     "qs": "^6.6.0",
     "swiper": "^4.4.2",
